entrypoint/entrypoint.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stairwell
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stairwell
  name: entrypoint-deployment
spec:
  selector:
    matchLabels:
      app: entrypoint
  template:
    metadata:
      labels:
        app: entrypoint
    spec:
      containers:
        - name: entrypoint-container
          image: guru/stairwell-takehome-entrypoint
          imagePullPolicy: Always
          args:
            - --uri=http://api.tiki.systems:3000
          ports:
            - protocol: TCP
              containerPort: 8080
              name: http-server
---
apiVersion: v1
kind: Service
metadata:
  namespace: stairwell
  name: entrypoint-service
spec:
  type: NodePort
  selector:
    app: entrypoint
  ports:
    - protocol: TCP
      name: http-server
      targetPort: http-server
      port: 42069
